# llms-debating

./: .gitignore  README.md  pyproject.toml
agents/aristotle/: agent.yaml  cf.md
agents/aristotle/skills/: cross_cf_persuasion.md  justification_writing.md
agents/confucius/: cf.md
agents/confucius/skills/: cross_cf_persuasion.md  justification_writing.md
agents/mill/: cf.md
agents/mill/skills/: cross_cf_persuasion.md  justification_writing.md
configs/: default.yaml  dossier.yaml  johannesburg_unemployment.yaml  johannesburg_unemployment_open.yaml  sinking_jakarta.yaml  sinking_jakarta_open.yaml  tourist_ban.yaml  triage.yaml
judge/: judge.md
scenarios/: homelessness_bcn.md  homelessness_bcn_dossier.md  homelessness_bcn_explicit.md  homelessness_bcn_packages.md  homelessness_bcn_touristban.md  homelessness_bcn_triage.md  johannesburg_unemployment.md  johannesburg_unemployment_openended.md  sinking_jakarta.md  sinking_jakarta_openended.md
src/deliberation/: __init__.py  agent.py  backends.py  judge.py  models.py  protocols.py  run.py  tools.py
tests/: test_smoke.py
viewer/: README.md  build_static.py  index.html  serve.py
