[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deliberation"
version = "0.1.0"
description = "Minimal core for multi-agent Conceptual-Framework policy deliberation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "litellm>=1.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Optional local OpenAI-compatible (vLLM) backend client.
local = ["openai>=1.0"]
# Prettier render().
pretty = ["rich>=13.0"]
# Development / test tooling.
dev = ["pytest>=8.0", "mypy>=1.8", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
